CAMBIO DE NOMBRE

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
     </li>
     <li style="margin-left: 10px; margin-right: 10px;">      
-      <label for="first_name" class="black-text">Nombre Apellido</label>
+      <label for="first_name" class="black-text">Nombres Apellido</label>
       <input placeholder="Ingresa Nombre" id="first_name" type="text">
     </li>
     <li style="margin-left: 10px; margin-right: 10px;">      
