--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
     </li>
     <li style="margin-left: 10px; margin-right: 10px;">      
-      <label for="first_name" class="black-text">Nombre Apellido</label>
+      <label for="first_name" class="black-text">Nombres Apellido</label>
       <input placeholder="Ingresa Nombre" id="first_name" type="text">
     </li>
     <li style="margin-left: 10px; margin-right: 10px;">      
@@ -83,7 +83,7 @@
               <img src="img/logo.svg" style="width: 70%; height: 70%; padding-top: 10px;">
             </div>
             <div class="col s4 input-field"> 
-              <label for="first_name" class="white-text">Nombre Apellido</label>
+              <label for="first_name" class="white-text">Nombres Apellido</label>
               <input placeholder="" id="first_name" type="text">
             </div>
             <div class="col s2 input-field">  
@@ -168,7 +168,7 @@
 <div class="" style="background-color: #2f1448;">
   <div class="row container vertical">
     <div class="col l6 m6 white-text" style="padding-top: 11%;">
-      <h3 class="thin">Newslatters<p style="font-size: 10px;">Quieres recibir nuestras notificaciones</p></h3>
+      <h3 class="thin">Newsletters<p style="font-size: 10px;">Quieres recibir nuestras notificaciones</p></h3>
     </div>
     <div class="col l6 m6 white-text" style="padding-bottom: 12%; padding-top: 12%;">
         <form action="">
