--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
 <div class="" style="background-color: #2f1448;">
   <div class="row container vertical">
     <div class="col l6 m6 white-text" style="padding-top: 11%;">
+      <!---hola aqui no sabia que hace-->
       <h3 class="thin">Newsletters<p style="font-size: 10px;">Quieres recibir nuestras notificaciones</p></h3>
     </div>
     <div class="col l6 m6 white-text" style="padding-bottom: 12%; padding-top: 12%;">
